# omega

./: .gitignore  ANALYSIS_REPORT.md  LICENSE  Makefile  QUICK_ANALYSIS.md  README.md  VISUAL_SUMMARY.md  АНАЛИЗ_ПРОЕКТА.md
.github/workflows/: build.yml
assets/examples/: basic-math.kpack
chain/include/: kolibri_chain.h
chain/src/: kolibri_chain.c
core/: CMakeLists.txt
core/include/: kolibri_core.h  kolibri_utils.h
core/src/: kolibri_core.c  kolibri_utils.c
docs/: ARCHITECTURE.md  BUILD.md  DEMO_SCRIPT.md  FORMULA_DSL.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  REFACTORING.md
pwa/: package.json  tailwind.config.js
pwa/public/: index.html  manifest.json
pwa/src/: App.css  App.js  App.test.js  index.css  index.js  service-worker.js  serviceWorkerRegistration.js
pwa/src/components/: ClusterManager.css  ClusterManager.js  Dashboard.css  Dashboard.js  FormulaGraph.js  ImportExport.css  ImportExport.js  KernelPanel.css  KernelPanel.js  RuleTiers.css  RuleTiers.js
pwa/src/components/common/: UIComponents.css  UIComponents.js
pwa/src/hooks/: useDataLoader.js
pwa/src/services/: db.js
scripts/: pack.sh  sign.sh  verify.sh  verify_system.sh
wasm/: build_wasm.sh
wasm/bridge/: kolibri-bridge.js
